--- a/index.html
+++ b/index.html
@@ -1,51 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Huddle landing page with coded decorative elements</title>
 
+  <title>Frontend Mentor | Huddle landing page with coded decorative elements</title>
+  <link rel="stylesheet" href="main.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+  <!-- <div id="triangle"></div>-->
+  <header>
 
-  Try It Free
+    <div id="logo">
+    </div>
 
-  Build The Community Your Fans Will Love
+    <div id="imgLogo">
+      <img src="images\logo.svg">
+    </div>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+    <div id="rectangle"></div>
 
-  Get Started For Free
+    <div id="tryIt"><a>Try It Free</a></div>
+    
+  </header>
+  <main>
+    <div id="hero">
+        <img id="mockups"  src="images/illustration-mockups.svg">
+    </div>
+    
 
-  Flowing Conversations
+    Build The Community Your Fans Will Love
 
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
-  just-in-time loading for a more natural flow.
+    Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+    Create connections with your users as you engage in genuine discussion.
 
-  Grow Together
+    Get Started For Free
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. Think of 
-  the insightful conversations you miss out on with a feedback form. 
+    Flowing Conversations
 
-  Your Users
+    You wouldn't paginate a conversation in real life, so why do it online? Our threads have
+    just-in-time loading for a more natural flow.
 
-  It takes no time at all to integrate Huddle with your app's authentication solution. This means, once 
-  signed in to your app, your users can start chatting immediately.
+    Grow Together
 
-  Try It Free
+    Generate meaningful discussions with your audience and build a strong, loyal community. Think of
+    the insightful conversations you miss out on with a feedback form.
 
-  Fully featured 30-day free trial - no credit card required
+    Your Users
 
-  Get Started For Free
+    It takes no time at all to integrate Huddle with your app's authentication solution. This means, once
+    signed in to your app, your users can start chatting immediately.
 
+    Try It Free
+
+    Fully featured 30-day free trial - no credit card required
+
+    Get Started For Free
+  </main>
+  <footer>
   &copy; Copyright 2019 Huddle. All rights reserved.
 
   About Us
@@ -58,16 +86,17 @@
 
   Subscribe
 
-  To receive tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
+  To receive tips on how to grow your community, sign up to our weekly newsletter. We’ll never
   send you spam or pass on your email address
 
   Subscribe
 
-  <footer>
+  
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
 </body>
+
 </html>
