feat: layout continued. Main and footer section

--- a/index.html
+++ b/index.html
@@ -11,16 +11,8 @@
   <title>Frontend Mentor | Huddle landing page with coded decorative elements</title>
   <link rel="stylesheet" href="main.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -37,61 +29,101 @@
     <div id="rectangle"></div>
 
     <div id="tryIt"><a>Try It Free</a></div>
-    
+
   </header>
   <main>
     <div id="hero">
-        <img id="mockups"  src="images/illustration-mockups.svg">
+      <img id="mockups" src="images/illustration-mockups.svg">
     </div>
-    
 
-    Build The Community Your Fans Will Love
+    <div id="build">
+      <h1>Build The Community Your Fans Will Love</h1>
+      <p>
+        Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+        Create connections with your users as you engage in genuine discussion.
+      </p>
+      <button class="getStarted">Get Started For Free</button>
+    </div>
 
-    Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-    Create connections with your users as you engage in genuine discussion.
+    <div id="illustration">
 
-    Get Started For Free
+      <img src="images/illustration-your-users.svg">
 
-    Flowing Conversations
+      <div id="flowing">
+        <h2>
+          Flowing Conversations
+        </h2>
 
-    You wouldn't paginate a conversation in real life, so why do it online? Our threads have
-    just-in-time loading for a more natural flow.
+        <p>
+          You wouldn't paginate a conversation in real life, so why do it online? Our threads have
+          just-in-time loading for a more natural flow.
+        </p>
 
-    Grow Together
+        <h2>Grow Together</h2>
 
-    Generate meaningful discussions with your audience and build a strong, loyal community. Think of
-    the insightful conversations you miss out on with a feedback form.
+        <p>
+          Generate meaningful discussions with your audience and build a strong, loyal community. Think of
+          the insightful conversations you miss out on with a feedback form.
+        </p>
 
-    Your Users
+        <h2> Your Users</h2>
 
-    It takes no time at all to integrate Huddle with your app's authentication solution. This means, once
-    signed in to your app, your users can start chatting immediately.
+        <p>
+          It takes no time at all to integrate Huddle with your app's authentication solution. This means, once
+          signed in to your app, your users can start chatting immediately.
 
-    Try It Free
+        </p>
 
-    Fully featured 30-day free trial - no credit card required
+      </div>
 
-    Get Started For Free
+    </div>
+
+    <div id="featured">
+      <div id="trial">
+        <h1>Try It Free</h1>
+        <p>
+          Fully featured 30-day free trial - no credit card required
+        </p>
+        <button class="getStarted">Get Started For Free</button>
+      </div>
+    </div>
+
+    </div>
   </main>
   <footer>
-  &copy; Copyright 2019 Huddle. All rights reserved.
+    <div class="copy">
+      <img src="images\logo.svg">
+      <div id="socialContacts">
+        <a href="" class="fa fa-facebook-f" rel="noopener"></a>
+        <a href="" class="fa fa-instagram" rel="noopener"></a>
+        <a href="" class="fa fa-twitter" rel="noopener"></a>
+      </div>
+      <p>
+        &copy; Copyright 2019 Huddle. All rights reserved.
+      </p>
+    </div>
 
-  About Us
-  What We Do
-  FAQ
+    <div class="about">
+      <h6>About Us</h6>
+      <h6>What We Do</h6>
+      <h6>FAQ</h6>
+      <h6>Career</h6>
+      <h6>Blog</h6>
+      <h6> Contact Us</h6>
+    </div>
 
-  Career
-  Blog
-  Contact Us
 
-  Subscribe
+    <div class="subscribe">
+     <h4>Subscribe</h4> 
 
-  To receive tips on how to grow your community, sign up to our weekly newsletter. We’ll never
-  send you spam or pass on your email address
+      To receive tips on how to grow your community, sign up to our weekly newsletter. We’ll never
+      send you spam or pass on your email address
 
-  Subscribe
+      Subscribe
+    </div>
 
-  
+
+
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
