feat: css mobile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
+  <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <title>Frontend Mentor | Huddle landing page with coded decorative elements</title>
   <link rel="stylesheet" href="main.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -29,6 +29,7 @@
     <div id="rectangle"></div>
 
     <div id="tryIt"><a>Try It Free</a></div>
+    <div id="additional"></div>
 
   </header>
   <main>
@@ -80,7 +81,7 @@
 
     <div id="featured">
       <div id="trial">
-        <h1>Try It Free</h1>
+        <h3>Try It Free</h3>
         <p>
           Fully featured 30-day free trial - no credit card required
         </p>
@@ -91,9 +92,37 @@
     </div>
   </main>
   <footer>
+
     <div class="copy">
       <img src="images\logo.svg">
-      <div id="socialContacts">
+    </div>
+
+    <div class="about">
+      <h6>About Us</h6>
+      <h6>Career</h6>
+      <h6>What We Do</h6>
+      <h6>Blog</h6>
+      <h6>FAQ</h6>
+
+
+      <h6> Contact Us</h6>
+    </div>
+
+
+    <div class="subscribe">
+      <h4>Subscribe</h4>
+
+      <p>
+        To receive tips on how to grow your community, sign up to our weekly newsletter. We’ll never
+        send you spam or pass on your email address
+      </p>
+      <input type="text">
+      <button id="sub"> Subscribe</button>
+
+    </div>
+
+    <div id="socialContacts">
+      <div id="socials">
         <a href="" class="fa fa-facebook-f" rel="noopener"></a>
         <a href="" class="fa fa-instagram" rel="noopener"></a>
         <a href="" class="fa fa-twitter" rel="noopener"></a>
@@ -103,30 +132,9 @@
       </p>
     </div>
 
-    <div class="about">
-      <h6>About Us</h6>
-      <h6>What We Do</h6>
-      <h6>FAQ</h6>
-      <h6>Career</h6>
-      <h6>Blog</h6>
-      <h6> Contact Us</h6>
-    </div>
-
-
-    <div class="subscribe">
-     <h4>Subscribe</h4> 
-
-      To receive tips on how to grow your community, sign up to our weekly newsletter. We’ll never
-      send you spam or pass on your email address
-
-      Subscribe
-    </div>
-
-
-
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Chamu Mutezva</a>.
     </p>
   </footer>
 </body>
