feat: created separate css files - small and medium devices

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <title>Frontend Mentor | Huddle landing page with coded decorative elements</title>
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" type="text/css" media="screen  and (max-width: 650px)" href="smallDevices.css">
+  <link rel="stylesheet" type="text/css" media="screen  and (min-width: 651px) and (max-width: 750px)" href="mediumDevices.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
