--- a/index.html
+++ b/index.html
@@ -10,103 +10,102 @@
   <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <title>Frontend Mentor | Huddle landing page with coded decorative elements</title>
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" type="text/css" media="screen  and (max-width: 650px)" href="smallDevices.css">
-  <link rel="stylesheet" type="text/css" media="screen  and (min-width: 651px) and (max-width: 960px)" href="mediumDevices.css">
+   <link rel="stylesheet" type="text/css" media="screen  and (max-width: 650px)" href="smallDevices.css">
+  <link rel="stylesheet" type="text/css" media="screen  and (min-width: 651px) and (max-width: 960px)" href="mediumDevices.css"> 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
-  <!-- <div id="triangle"></div>-->
-  <header>
-    <div id="logo">
-    </div>
+  <div class="page-wrapper">
 
-    <div id="imgLogo">
-      <img src="images\logo.svg">
-    </div>
-
-    <div id="rectangle"></div>
-
-    <div id="tryIt"><a>Try It Free</a></div>
-    <div id="additional"></div>
-
-  </header>
-  <main>
-    <div id="hero">
-      <img id="mockups" src="images/illustration-mockups.svg">
-    </div>
-
-    <div id="build">
-      <h1>Build The Community Your Fans Will Love</h1>
-      <p>
-        Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-        Create connections with your users as you engage in genuine discussion.
-      </p>
-      <button class="getStarted">Get Started For Free</button>
-    </div>
-
-    <div id="illustration">
-
-      <img src="images/illustration-your-users.svg">
-
-      <div id="flowing">
-        <h2>
-          Flowing Conversations
-        </h2>
-
-        <p>
-          You wouldn't paginate a conversation in real life, so why do it online? Our threads have
-          just-in-time loading for a more natural flow.
-        </p>
-
-        <h2>Grow Together</h2>
-
-        <p>
-          Generate meaningful discussions with your audience and build a strong, loyal community. Think of
-          the insightful conversations you miss out on with a feedback form.
-        </p>
-
-        <h2> Your Users</h2>
-
-        <p>
-          It takes no time at all to integrate Huddle with your app's authentication solution. This means, once
-          signed in to your app, your users can start chatting immediately.
-
-        </p>
-
+    <header>
+      <div id="logo">
       </div>
 
-    </div>
+      <div id="imgLogo">
+        <img src="images\logo.svg">
+      </div>
 
-    <div id="featured">
-      <div id="trial">
-        <h3>Try It Free</h3>
+      <div id="rectangle"></div>
+
+      <div id="tryIt"><a>Try It Free</a></div>
+      <div id="additional"></div>
+    </header>
+
+    <main>
+      <div id="hero">
+        <img id="mockups" src="images/illustration-mockups.svg">
+      </div>
+
+      <div id="build">
+        <h1>Build The Community Your Fans Will Love</h1>
         <p>
-          Fully featured 30-day free trial - no credit card required
+          Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+          Create connections with your users as you engage in genuine discussion.
         </p>
         <button class="getStarted">Get Started For Free</button>
       </div>
-    </div>
 
-    </div>
+      <div id="illustration">
+
+        <img src="images/illustration-your-users.svg">
+
+        <div id="flowing">
+          <h2>
+            Flowing Conversations
+          </h2>
+
+          <p>
+            You wouldn't paginate a conversation in real life, so why do it online? Our threads have
+            just-in-time loading for a more natural flow.
+          </p>
+
+          <h2>Grow Together</h2>
+
+          <p>
+            Generate meaningful discussions with your audience and build a strong, loyal community. Think of
+            the insightful conversations you miss out on with a feedback form.
+          </p>
+
+          <h2> Your Users</h2>
+
+          <p>
+            It takes no time at all to integrate Huddle with your app's authentication solution. This means, once
+            signed in to your app, your users can start chatting immediately.
+
+          </p>
+
+        </div>
+
+      </div>
+
+      <div id="featured">
+        <div id="trial">
+          <h3>Try It Free</h3>
+          <p>
+            Fully featured 30-day free trial - no credit card required
+          </p>
+          <button class="getStarted">Get Started For Free</button>
+        </div>
+      </div>
+
+ 
   </main>
-  <footer>
 
+  <footer>
     <div class="copy">
       <img src="images\logo.svg">
     </div>
 
     <div class="about">
-      <h6>About Us</h6>
-      <h6>Career</h6>
-      <h6>What We Do</h6>
-      <h6>Blog</h6>
-      <h6>FAQ</h6>
-
-
-      <h6> Contact Us</h6>
+      <a href="">About Us</a>
+      <a href="">Career</a>
+      <a href="">What We Do</a>
+      <a href="">Blog</a>
+      <a href="">FAQ</a>
+      <a href=""> Contact Us</a>
     </div>
 
 
@@ -138,6 +137,7 @@
       Coded by <a href="#">Chamu Mutezva</a>.
     </p>
   </footer>
+  </div>
 </body>
 
 </html>
